Fix component list overflow background color

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -14,6 +14,7 @@
   --unit10: calc(var(--unit1) * 10);
   --unit11: calc(var(--unit1) * 11);
   --unit12: calc(var(--unit1) * 12);
+  --transparent: transparent;
 }
 
 h1,
